--- a/package.json
+++ b/package.json
@@ -108,6 +108,8 @@
     "release:patch": "npm version patch && git push --follow-tags",
     "release:minor": "npm version minor && git push --follow-tags",
     "release:major": "npm version major && git push --follow-tags",
-    "release": "npm run release:patch"
+    "release": "npm run release:patch",
+    "release-all": "git add . && git commit -m \"New Update\" && npm run release:patch && npm publish --access public"
   }
 }
+
